[tool.poetry]
name = "mondo"
version = "0.0.0"
description = "The MONDO package"
authors = ["The MONDO team"]
license = "Creative Commons"
readme="README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ontobot-change-agent = "^0.2.5"
kgcl-schema = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
