[tool.poetry]
name = "mondo-ai"
version = "0.1.0"
description = ""
authors = ["Nico Matentzoglu <nicolas.matentzoglu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
oaklib = "^0.6.9"
langchain-core = "^0.2.7"
langchain-openai = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
